# freelance_web_app

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
freelance_web_app/: .env.example  Dockerfile  docker-compose.yml  manage.py
freelance_web_app/apps/admin_profile/: apps.py  models.py
freelance_web_app/apps/agreement/: apps.py
freelance_web_app/apps/auth_register_user/: apps.py  forms.py  managers.py  models.py  urls.py  views.py
freelance_web_app/apps/chat/: apps.py
freelance_web_app/apps/client_profile/: apps.py  forms.py  models.py  urls.py  views.py
freelance_web_app/apps/freelancer_profile/: apps.py  forms.py  models.py  urls.py  views.py
freelance_web_app/apps/project/: apps.py
freelance_web_app/apps/proposal/: apps.py
freelance_web_app/apps/user/: models.py
freelance_web_app/choices/: role_choice.py
freelance_web_app/choises/: freelancer_lvl_choices.py
freelance_web_app/client_profile/: apps.py
freelance_web_app/core/: apps.py  models.py
freelance_web_app/freelance_app/: asgi.py  settings.py  urls.py
freelance_web_app/freelance_web_app/: asgi.py  settings.py  urls.py  wsgi.py
freelance_web_app/freelancer_profile/: apps.py
web_application/: manage.py
web_application/apps/admin_profile/: apps.py
web_application/apps/client_profile/: admin.py  apps.py  forms.py  models.py
web_application/apps/freelancer_profile/: admin.py  apps.py  forms.py  models.py
web_application/core/: models.py
web_application/freelance_app/: settings.py  urls.py  wsgi.py
(+31 files in other folders)
