[tool.poetry]
name = "freelance-web-app"
version = "0.1.0"
description = ""
authors = ["Makima3 <natalia.kolchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.1"
django-dotenv = "^1.4.2"
tzdata = "^2024.1"
psycopg2 = "^2.9.9"
pillow = "^10.4.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
